--- a/frontend/src/main/index.html
+++ b/frontend/src/main/index.html
@@ -1,84 +1,139 @@
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/html">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>TeamSevenBank</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
 
+    <title>Off Canvas Template for Bootstrap</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/core.js"></script>
-    <script type="text/javascript" src="js/Login.js"></script>
-    <script type="text/javascript" src="js/Register.js"></script>
-    <script type="text/javascript" src="js/SignOut.js"></script>
-    <script type="text/javascript" src="js/ServerProxy.js"></script>
-    <script type="text/javascript" src="js/Engine.js"></script>
-    <script type="text/javascript" src="js/InputEngine.js"></script>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/login.css">
+    <link href="css/forindex.css" rel="stylesheet">
+
 </head>
-<body onload="newEngine.load()" id="body">
 
-
-<div id="loginModal" class="modal">
-        <span onclick="document.getElementById('loginModal').style.display='none';
-                       document.getElementById('body').style.overflow='auto';" class="close" title="Close Modal">x</span>
-    <form class="modal-content animate" style="background-color: #efe9db">
-
-        <div class="container">
-            <label><b>Username</b></label>
-            <input id="loginInput" type="text" placeholder="Enter Username" name="uname" required>
-
-            <label><b>Password</b></label>
-            <input id="loginPassword" type="password" placeholder="Enter Password" name="psw" required>
-            <p id="loginError" style="color: red; size: 14px; display: none; "></p>
-            <div class="container" style="background-color:#dcd6c6; width: auto">
-                <button type="button" onclick="var login = new Login; login.login();" class="loginbtn">Login</button>
-                <button type="button" onclick="document.getElementById('loginModal').style.display='none'" class="cancelbtn">Cancel</button>
-            </div>
+<body onload="newEngine.load();" id="body">
+<nav class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" id="loginedInfo"></a>
         </div>
-    </form>
-</div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div><!-- /.nav-collapse -->
+    </div><!-- /.container -->
+</nav><!-- /.navbar -->
 
-<div id="registerModal" class="modal">
-      <span onclick="document.getElementById('registerModal').style.display='none';
-                     document.getElementById('body').style.overflow='auto';" class="close" title="Close Modal">x</span>
-    <form class="modal-content animate" style="background-color: #efe9db">
-        <div class="container">
-            <label><b>Login</b></label>
-            <input id="registerLoginInput" type="text" placeholder="Enter Login" name="login" required>
-
-            <label><b>Password</b></label>
-            <input id="registerPasswordInput" type="password" placeholder="Enter Password" name="psw" required>
-
-            <label><b>Repeat Password</b></label>
-            <input id="registerPasswordRepeatInput"type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-            <p id="registerRule" style = "size: 14px;"><b>Username and password should be between 5 and 50 symbols</b></p>
-            <p id="registerError" style = "size: 14px; color: red; display: none;"><b>Passwords should match</b></p>
-
-            <div class="container" style="background-color:#dcd6c6; width: auto">
-                <button type="button" onclick="document.getElementById('registerModal').style.display='none'" class="cancelbtn">Cancel</button>
-                <button type="button" onclick="var register = new Register; register.register();" class="loginbtn">Sign Up</button>
-            </div>
-        </div>
-    </form>
-</div>
-
-<script type="text/javascript" src="js/CloseIfOutside.js"></script>
-
-<div class="navbar">
-    <button id = "loginButton" onclick="document.getElementById('loginModal').style.display='block';
-                                            document.getElementById('body').style.overflow = 'hidden';" style="width:auto; margin: 10px; float: right;">Login</button>
-    <button id = "registerButton" onclick="document.getElementById('registerModal').style.display='block';
-                                            document.getElementById('body').style.overflow = 'hidden';" style="width:auto; margin: 10px; float: right;">Sign Up</button>
-    <p id="loginedInfo" class="logininfo"></p>
-    <button id = "signOut" onclick="var signOut = new SignOut; signOut.signOut();" style = "display: none;" class="signoutbtn">Sign out</button>
-</div>
 <div class="container">
-    <div class="page-header">
-        <h1>JSSB</h1>
-    </div>
-</div>
+
+    <div class="row row-offcanvas row-offcanvas-right">
+
+        <div class="col-xs-12 col-sm-9">
+            <p class="pull-right visible-xs">
+                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+            </p>
+            <div class="jumbotron">
+                <h1>Hello, world!</h1>
+                <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some
+                    responsive-range viewport sizes to see it in action.</p>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-lg-4">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div><!--/.col-xs-6.col-lg-4-->
+                <div class="col-xs-6 col-lg-4">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div><!--/.col-xs-6.col-lg-4-->
+                <div class="col-xs-6 col-lg-4">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div><!--/.col-xs-6.col-lg-4-->
+                <div class="col-xs-6 col-lg-4">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div><!--/.col-xs-6.col-lg-4-->
+                <div class="col-xs-6 col-lg-4">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div><!--/.col-xs-6.col-lg-4-->
+                <div class="col-xs-6 col-lg-4">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                </div><!--/.col-xs-6.col-lg-4-->
+            </div><!--/row-->
+        </div><!--/.col-xs-12.col-sm-9-->
+
+        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+            <div class="list-group">
+                <a href="#" class="list-group-item active">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+                <a href="#" class="list-group-item">Link</a>
+            </div>
+        </div><!--/.sidebar-offcanvas-->
+    </div><!--/row-->
+
+    <hr>
+
+    <footer>
+        <p>&copy; 2016 Company, Inc.</p>
+    </footer>
+
+</div><!--/.container-->
+
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript" src="js/core.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/core.js"></script>
+<script src="js/forIndex.js"></script>
+<script type="text/javascript" src="js/ServerProxy.js"></script>
+<script type="text/javascript" src="js/Engine.js"></script>
 </body>
 </html>
