--- a/frontend/src/main/index.html
+++ b/frontend/src/main/index.html
@@ -61,7 +61,7 @@
         <!-- Example row of columns -->
         <div class="row">
             <div class="col">
-                <h6>Head</h6>
+                <h6>Money Transfer</h6>
                 <form>
                     <div class="form-group row">
                         <div class="col-sm-10">
@@ -82,28 +82,49 @@
             </div>
             <div class="col-md-4">
                 <div class="list-group">
-                    <button type="button" class="list-group-item list-group-item-action" data-toggle="modal"
-                            data-target="#checkBalance">
+                    <button type="button" class="list-group-item list-group-item-action"
+                            onclick="let checkBalance=new CheckBalance; checkBalance.checkBalance();">
                         Check Balance
                     </button>
-                    <button type="button" class="list-group-item list-group-item-action" data-toggle="modal"
-                            data-target="#checkBalance">
+                    <button type="button" class="list-group-item list-group-item-action"
+                            onclick="let createAccount=new CreateAccount; createAccount.createAccount();">
                         Create Account
                     </button>
-                    <button type="button" class="list-group-item list-group-item-action" data-toggle="modal"
-                            data-target="#checkBalance">
+                    <button type="button" class="list-group-item list-group-item-action"
+                            onclick="let deleteAccount=new DeleteAccount; deleteAccount.deleteAccount();">
                         Delete Account
                     </button>
-                    <button type="button" class="list-group-item list-group-item-action" data-toggle="modal"
-                            data-target="#checkBalance">
+                    <button type="button" class="list-group-item list-group-item-action"
+                            onclick="let deleteUser=new DeleteUser; deleteUser.deleteUser();">
                         Delete User
+                    </button>
+                    <button type="button" onclick="Test();" class="list-group-item list-group-item-action">
+                        Test button
                     </button>
                 </div>
             </div>
         </div>
 
-        <hr>
+        <div class="modal" id="Modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="ModalTitle"></h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="ModalMessage" ></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <hr>
     </div> <!-- /container -->
 
 </main>
@@ -114,13 +135,18 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script type="text/javascript" src="js/core.js"></script>
+<script src="js/core.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="js/bootstrap.js"></script>
-<script type="text/javascript" src="js/core.js"></script>
 <script src="js/forIndex.js"></script>
-<script type="text/javascript" src="js/ServerProxy.js"></script>
-<script type="text/javascript" src="js/Engine.js"></script>
+<script src="js/ServerProxy.js"></script>
+<script src="js/Engine.js"></script>
+<script src="js/CheckBalance.js"></script>
+<script src="js/FileForTests.js"></script>
+<script src="js/MoneyTransfer.js"></script>
+<script src="js/CreateAccount.js"></script>
+<script src="js/DeleteAccount.js"></script>
+<script src="js/DeleteUser.js"></script>
 </body>
 </html>
