--- a/frontend/src/main/index_welcomePage.html
+++ b/frontend/src/main/index_welcomePage.html
@@ -72,7 +72,7 @@
                                 </form>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" onclick="var login = new Login; login.login();" class="btn btn-primary">Sign in</button>
+                                <button type="button" onclick="let login = new Login; login.login();" class="btn btn-primary">Sign in</button>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                                 </form>
                             </div>
                             <div class="modal-footer">
-                                <a type="button" onclick="var register = new Register; register.register();" class="btn btn-primary"> Register </a>
+                                <a type="button" onclick="let register = new Register; register.register();" class="btn btn-primary"> Register </a>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
@@ -138,5 +138,6 @@
 <script type="text/javascript" src="js/Register.js"></script>
 <script type="text/javascript" src="js/ServerProxy.js"></script>
 <script type="text/javascript" src="js/Engine.js"></script>
+<script type="text/javascript" src="js/InputEngine.js"></script>
 </body>
 </html>
