frontend update - almost all buttons (need tests)

--- a/frontend/src/main/index.html
+++ b/frontend/src/main/index.html
@@ -137,16 +137,14 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/core.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="js/bootstrap.js"></script>
 <script src="js/forIndex.js"></script>
-<script src="js/ServerProxy.js"></script>
 <script src="js/Engine.js"></script>
-<script src="js/CheckBalance.js"></script>
+<script src="js/Requests/CheckBalance.js"></script>
 <script src="js/FileForTests.js"></script>
-<script src="js/MoneyTransfer.js"></script>
-<script src="js/CreateAccount.js"></script>
-<script src="js/DeleteAccount.js"></script>
-<script src="js/DeleteUser.js"></script>
+<script src="js/Requests/MoneyTransfer.js"></script>
+<script src="js/Requests/CreateAccount.js"></script>
+<script src="js/Requests/DeleteAccount.js"></script>
+<script src="js/Requests/DeleteUser.js"></script>
 </body>
 </html>
