--- a/frontend/src/main/index.html
+++ b/frontend/src/main/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="newEngine.load();" id="body">
+<body onload="newEngine.load();" onunload="newEngine.unload();" id="body">
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#">Login </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
