--- a/frontend/src/main/index_welcomePage.html
+++ b/frontend/src/main/index_welcomePage.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body onload="newEngine.load()" id="body">
+<body id="body">
 
 <div class="site-wrapper">
 
@@ -38,7 +38,8 @@
 
             <div class="inner cover">
                 <h1 class="cover-heading">Cover your page.</h1>
-                <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+                <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download,
+                    edit the text, and add your own fullscreen background photo to make it your own.</p>
                 </p>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
                     Sign in
@@ -48,11 +49,12 @@
                 </button>
 
                 <!-- Modal -->
-                <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal fade" id="loginModal" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Please sign in</h5>
+                                <h5 class="modal-title text-muted">Please sign in</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
@@ -61,29 +63,32 @@
                                 <form>
                                     <div class="form-group">
                                         <label for="loginInputEmail" class="sr-only">Email address</label>
-                                        <input type="email" class="form-control" id="loginInputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-                                        <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                        <input type="email" class="form-control" id="loginInputEmail"
+                                               aria-describedby="emailHelp" placeholder="Enter email">
                                     </div>
                                     <div class="form-group">
-                                        <label for="loginInputPassword">Password</label>
-                                        <input type="password" class="form-control" id="loginInputPassword" placeholder="Password">
+                                        <label for="loginInputPassword" class="sr-only">Password</label>
+                                        <input type="password" id="loginInputPassword" class="form-control"
+                                               placeholder="Password" required>
                                     </div>
                                     <p id="loginError" style="color: red; size: 14px; display: none; "></p>
                                 </form>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" onclick="let login = new Login; login.login();" class="btn btn-primary">Sign in</button>
+                                <button type="button" onclick="let login = new Login; login.login();"
+                                        class="btn btn-primary">Sign in
+                                </button>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="modal" id="registerModal" tabindex="-1" role="dialog" >
+                <div class="modal fade" id="registerModal" tabindex="-1" role="dialog">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Please register</h5>
+                                <h5 class="modal-title text-muted">Please register</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
@@ -92,24 +97,40 @@
                                 <form>
                                     <div class="form-group">
                                         <label for="registerInputEmail" class="sr-only">Email address</label>
-                                        <input type="email" class="form-control" id="registerInputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-                                        <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                        <input type="email" class="form-control" id="registerInputEmail"
+                                               aria-describedby="emailHelp" placeholder="Enter email">
+                                        <small class="form-text text-muted">We'll never share your email with anyone
+                                            else.
+                                        </small>
                                     </div>
                                     <div class="form-group">
                                         <label for="registerInputPassport" class="sr-only">Passport number</label>
-                                        <input type="password" id="registerInputPassport" class="form-control" placeholder="Passport number" required>
+                                        <input type="text" id="registerInputPassport" class="form-control"
+                                               placeholder="Passport number" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="exampleInputPassword1">Password</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                        <label for="registerInputPassword" class="sr-only">Password</label>
+                                        <input type="password" id="registerInputPassword" class="form-control"
+                                               placeholder="Password" required>
                                     </div>
                                     <div class="form-group">
                                         <label for="registerInputPasswordRepeat" class="sr-only">Repeat password</label>
-                                        <input type="password" id="registerInputPasswordRepeat" class="form-control" placeholder="Repeat password" required>
+                                        <input type="password" id="registerInputPasswordRepeat" class="form-control"
+                                               placeholder="Repeat password" required>
                                     </div>
-                                    <p id="registerRule" style = "size: 14px;"><b>Login and password length should be less than 50</b></p>
-                                    <p id="registerError" style = "size: 14px; color: red; display: none;"><b>Passwords should match</b></p>
-                                    <button type="submit" onclick="let register = new Register; register.register();" class="btn btn-primary">Submit</button>
+                                    <p class="text-muted" id="registerRule" style="size: 14px; "><b>Login and password length should be less
+                                        than 50</b></p>
+                                    <p id="registerError" style="size: 14px; color: red; display: none;"><b>Passwords
+                                        should match</b></p>
+
+                                    <div class="modal-footer">
+                                        <button type="submit"
+                                                onclick="let register = new Register; register.register();"
+                                                class="btn btn-primary">Register
+                                        </button>
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                        </button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -120,7 +141,8 @@
 
             <div class="mastfoot">
                 <div class="inner">
-                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a
+                            href="https://twitter.com/mdo">@mdo</a>.</p>
                 </div>
             </div>
 
