old files was removed + small frontend improvements

--- a/frontend/src/main/index_welcomePage.html
+++ b/frontend/src/main/index_welcomePage.html
@@ -118,7 +118,8 @@
                                         <input type="password" id="registerInputPasswordRepeat" class="form-control"
                                                placeholder="Repeat password" required>
                                     </div>
-                                    <p class="text-muted" id="registerRule" style="size: 14px; "><b>Login and password length should be less
+                                    <p class="text-muted" id="registerRule" style="size: 14px; "><b>Login and password
+                                        length should be less
                                         than 50</b></p>
                                     <p id="registerError" style="size: 14px; color: red; display: none;"><b>Passwords
                                         should match</b></p>
