--- a/frontend/src/main/index.html
+++ b/frontend/src/main/index.html
@@ -12,13 +12,14 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-
+    <link href="css/index.css" rel="stylesheet">
 </head>
 
-<body onload="newEngine.load();" onunload="newEngine.unload();" id="body">
+<body onload="newEngine.load();" id="body">
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Login </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" id="loginInfo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -31,7 +32,8 @@
                 <a class="nav-link" href="#">Info</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">Dropdown</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
@@ -43,6 +45,10 @@
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+        <button type="button" onclick="let signOut=new SignOut;signOut.signOut();"
+                class="btn btn-outline-success my-2 my-sm-0">
+            Sign Out
+        </button>
     </div>
 </nav>
 
@@ -52,7 +58,9 @@
     <div class="jumbotron">
         <div class="container">
             <h1 class="display-3">Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+            <p>This is a template for a simple marketing or informational website. It includes a large callout called a
+                jumbotron and three supporting pieces of content. Use it as a starting point to create something more
+                unique.</p>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
         </div>
     </div>
@@ -65,12 +73,14 @@
                 <form>
                     <div class="form-group row">
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" id="accountInput" placeholder="Account for transfer">
+                            <input type="email" class="form-control" id="accountInput"
+                                   placeholder="Account for transfer">
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="col-sm-10">
-                            <input type="password" class="form-control" id="moneyAmountInput" placeholder="Money amount">
+                            <input type="password" class="form-control" id="moneyAmountInput"
+                                   placeholder="Money amount">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -115,7 +125,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p id="ModalMessage" ></p>
+                        <p id="ModalMessage"></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn" data-dismiss="modal">Close</button>
@@ -130,7 +140,7 @@
 </main>
 
 <footer class="container">
-    <p>© Company 2017-2018</p>
+    <p>© Team Seven Bank 2018</p>
 </footer>
 <!-- Bootstrap core JavaScript
 ================================================== -->
@@ -146,5 +156,6 @@
 <script src="js/Requests/CreateAccount.js"></script>
 <script src="js/Requests/DeleteAccount.js"></script>
 <script src="js/Requests/DeleteUser.js"></script>
+<script src="js/SignOut.js"></script>
 </body>
 </html>
